Documenting API with Swagger-SwaggerUI
